# requestContext/errors.go
@@ -41,6 +41,7 @@ const (
 	CodeErrUnmarshal        ErrorCodes = "Error: Failed to unmarshal"
 	CodeErrJmesPath         ErrorCodes = "Error: JmesPath"
 	CodeErrJmesPathMarshal  ErrorCodes = "Error: JmesPathMarshal"
+	CodeErrPasswordHashing  ErrorCodes = "Error: Password-creation"
 
 	CodeErrRequestEntityTooLarge ErrorCodes = "Error: Request Entity too large"
 	CodeErrInputValidation       ErrorCodes = "Error: General input validation"
@@ -50,28 +51,35 @@ const (
 
 	CodeErrAuthenticationRequired ErrorCodes = "Error: Authentication required"
 	CodeErrAuthoriziationFailed   ErrorCodes = "Error: Authorization failed"
+	CodeErrAuthoriziation         ErrorCodes = "Error: Authorization missing"
 
-	CodeErrLocale           ErrorCodes = "Error: Locale error"
-	CodeErrProject          ErrorCodes = "Error: Project error"
-	CodeErrReportMissing    ErrorCodes = "Error: Report missing"
-	CodeErrTranslation      ErrorCodes = "Error: Translation error"
-	CodeErrCategory         ErrorCodes = "Error: Category error"
-	CodeErrTranslationValue ErrorCodes = "Error: TranslationValue error"
-	CodeErrImport           ErrorCodes = "Error: Import error"
+	CodeErrLocale               ErrorCodes = "Error: Locale error"
+	CodeErrUser                 ErrorCodes = "Error: User error"
+	CodeErrProject              ErrorCodes = "Error: Project error"
+	CodeErrReportMissing        ErrorCodes = "Error: Report missing"
+	CodeErrTranslation          ErrorCodes = "Error: Translation error"
+	CodeErrCategory             ErrorCodes = "Error: Category error"
+	CodeErrTranslationValue     ErrorCodes = "Error: TranslationValue error"
+	CodeErrOrganization         ErrorCodes = "Error: Organization error"
+	CodeErrOrganizationNotFound ErrorCodes = "Error: Organization not found"
+	CodeErrImport               ErrorCodes = "Error: Import error"
 
 	CodeErrNotFoundLocale  ErrorCodes = "Error: Locale not found"
 	CodeErrNotFoundProject ErrorCodes = "Error: Project not found"
 	CodeErrNotFoundUser    ErrorCodes = "Error: User not found"
 
 	CodeErrDBCreateLocale         ErrorCodes = "Error: Database Create Locale"
+	CodeErrDBCreateUser           ErrorCodes = "Error: Database Create User"
 	CodeErrCreateProject          ErrorCodes = "Error: Database Create Project"
 	CodeErrCreateTranslation      ErrorCodes = "Error: Database Create Translation"
 	CodeErrCreateCategory         ErrorCodes = "Error: Database Create Category"
+	CodeErrCreateOrganization     ErrorCodes = "Error: Database Create Organization"
 	CodeErrCreateTranslationValue ErrorCodes = "Error: Database Create TranslationValue"
 
 	CodeErrDBUpdateLocale         ErrorCodes = "Error: Database Update Locale"
 	CodeErrUpdateProject          ErrorCodes = "Error: Database Update Project"
 	CodeErrUpdateTranslation      ErrorCodes = "Error: Database Update Translation"
 	CodeErrUpdateCategory         ErrorCodes = "Error: Database Update Category"
+	CodeErrUpdateOrganization     ErrorCodes = "Error: Database Update Organization"
 	CodeErrUpdateTranslationValue ErrorCodes = "Error: Database Update TranslationValue"
 )
